# anchor

./: .gitignore  AI_IMPLEMENTATION_SUMMARY.md  AUTH_TEST_CHECKLIST.md  BETTER_AUTH_MIGRATION_COMPLETE.md  DEBUGGING_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  HACKATHON_DEMO.md  JWT_SETUP.md  MIGRATION_ENV_SETUP.md  Procfile  README.md  README_DEV.md  SETUP.md  demo-hackathon.sh  generateKeys.mjs  koyeb.yaml  package-lock.json  package.json  setup.sh
anchor-ble-bridge/: PRODUCTION_CHECKLIST.md  Package.resolved  Package.swift  README.md  RUN.sh  TEST.md  TESTING.md  TEST_DM_FLOW.md  TEST_INTEGRATION.md  test-dispatch.sh  test-full-cycle.sh  verify_noise_implementation.sh
backend/: .env.example  README.md  koyeb.yaml  package-lock.json  package.json  tsconfig.prod.json
backend/src/: auth.ts  index.ts  server.ts
convex/: ai_routing.ts  audit.js  audit.ts  auth.js  auth.ts  crons.js  crons.ts  escalation.js  escalation.ts  http.ts  incidents.js  incidents.ts  matching.js  matching.ts  mesh_messages.ts  schema.js  schema.ts  task_assignments.ts  tasks.js  tasks.ts  tsconfig.json  volunteers.js  volunteers.ts
convex/_generated/: api.d.ts
docs/: AI_INTEGRATION.md  CONVEX_BRIDGE_INTEGRATION.md  bridge-implementation-plan.md
flood-detection/: .cache.sqlite  .env.example  .gitignore  DEMO.md  Procfile  README.md  flood_monitor.py  flood_monitor_demo.py  pyproject.toml  requirements.txt  trigger_demo_alert.py
frontend/: .env.example  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
supabase/: README.md
(+41 files in other folders)
